fixed gap

--- a/css/global.header-nav.css
+++ b/css/global.header-nav.css
@@ -1,193 +1,3 @@
-/*.header__nav {
-    width: 100vw;
-    height: 104px;
-    padding: 0 24px;
-    position: fixed;
-    background-color: var(--mobile-background-color-nav);
-    color: var(--color-light);
-    z-index: 100; 
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;*/
-
-    /*.header__logo {
-        width: 176px;
-        position: relative;
-        z-index: 101;
-    }
-
-    .open {
-        display: flex !important;
-    }
-
-    .header__burger-container {
-        padding-top: 104px;
-        display: flex;
-        height: 100vh;
-        width: 100vw;
-
-        .header__menu {
-            list-style: none;
-            display: none;
-            flex-direction: column;
-            position: fixed;
-            align-items: center;
-            height: 100vh;
-            width: 100vw;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            z-index: 100;
-            overflow-y: auto;
-            padding-top: 104px;
-            background-color: var(--mobile-background-color-nav);
-            animation: burgerAnimation 0.4s;
-            row-gap: 30px;
-            order: 1;
-
-            .header__menu-link {
-                color: var(--color-light);
-                font-size: 1rem;
-                font-weight: 500;
-                letter-spacing: 0.2px;
-                text-decoration: none;
-                white-space: nowrap;
-            }
-        }
-
-        .header__socials {
-            list-style: none;
-            display: none;
-            flex-direction: row;
-            justify-content: center;
-            position: fixed;
-            width: 100vw;
-            left: 0;
-            z-index: 100;
-            overflow-y: auto;
-            animation: burgerAnimation 0.4s;
-            column-gap: 30px;
-            order: 2;
-            padding-top: 704px;
-
-            .header__socials-link svg:hover {
-                all: initial; /* reset css*//*
-                path {
-                    fill: var(--brand-color);
-                    transition: fill 0.2s ease-out;
-                }
-                path.logo_2gS {
-                    fill-opacity: 0;
-                }
-            }
-        }
-    }
-
-    .header__burger {
-        display: flex;
-        position: relative;
-        align-items: center;
-        justify-content: flex-end;
-        z-index: 101;
-        width: 30px;
-        height: 18px;
-        cursor: pointer;
-    }
-
-    .header__burger .header__burger-icon {
-        height: 2px;
-        width: 80%;
-        transform: scale(1);
-        background-color: var(--color-light);
-    }
-
-    .header__burger::before,
-    .header__burger::after {
-        content: '';
-        position: absolute;
-        height: 2px;
-        width: 100%;
-        background-color: var(--color-light);
-        transition: all 0.3s ease 0s;
-    }
-
-    .header__burger::before {
-        top: 0;
-    }
-
-    .header__burger::after {
-        bottom: 0;
-    }
-
-    .header__burger.active .header__burger-icon {
-        transform: scale(0);
-        background-color: transparent;
-    }
-
-    .header__burger.active::before {
-        top: 50%;
-        transform: translateY(50%);
-        transform: rotate(45deg);
-    }
-
-    .header__burger.active::after {
-        top: 50%;
-        transform: translateY(-50%);
-        transform: rotate(-45deg);
-    }
-}
-
-@keyframes burgerAnimation {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}*/
-
-/* tablet, landscape iPad, lo-res laptops and desktops *//*
-@media (min-width:991px) {
-    .header__nav {
-        background: rgba(0, 0, 0, 0.5);
-        padding: 0;
-        justify-content: space-around;
-        
-        .header__menu {
-            display: flex;
-            flex-direction: row;
-            grid-gap: 13px;
-            padding-right: 40px;
-            padding-top: 0;
-            position: relative;
-            background-color: unset;
-            height: unset;
-            width: unset;
-
-            .header__menu-link {
-                color: var(--color-light);
-                font-size: 0.875rem;
-                font-weight: 500;
-            }
-        }
-
-        .header__socials {
-            display: flex;
-            justify-content: center;
-            position: relative;
-            width: unset;
-            padding-top: 0;
-            column-gap: 15px;
-        }
-
-        .header__burger {
-            display: none;
-        }
-    }
-}*/
-
 .header {
     position: fixed;
     top: 0;
@@ -250,6 +60,7 @@
 .header__nav {
     display: flex;
     align-items: center;
+    gap: var(--spacing-xl);
 }
 
 .header__menu {
@@ -346,10 +157,48 @@
         transform: translateY(0) rotate(-45deg);
     }
 
-    /**/
     .header.is-open {
         background: var(--mobile-background-color-nav);
         transition: opacity ease-in-out, background-color ease-in-out;
     }
 }
 
+/* tablet, landscape iPad, lo-res laptops and desktops *//*
+@media (min-width:991px) {
+    .header__nav {
+        background: rgba(0, 0, 0, 0.5);
+        padding: 0;
+        justify-content: space-around;
+
+        .header__menu {
+            display: flex;
+            flex-direction: row;
+            grid-gap: 13px;
+            padding-right: 40px;
+            padding-top: 0;
+            position: relative;
+            background-color: unset;
+            height: unset;
+            width: unset;
+
+            .header__menu-link {
+                color: var(--color-light);
+                font-size: 0.875rem;
+                font-weight: 500;
+            }
+        }
+
+        .header__socials {
+            display: flex;
+            justify-content: center;
+            position: relative;
+            width: unset;
+            padding-top: 0;
+            column-gap: 15px;
+        }
+
+        .header__burger {
+            display: none;
+        }
+    }
+}*/
